--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,6 +1,25 @@
 .footer {
   position: fixed;
+  height: 100px;
   width: 100%;
   bottom: 0;
   background-color: rgba(229, 240, 84, 1);
+}
+
+.footer-container {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.footer-container .middle {
+  max-width: 200px;
+}
+
+@media screen and (min-width: 800px) {
+  .footer-container {
+    flex-direction: row;
+  }
 }
