--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,6 +1,17 @@
 .hero-container {
   display: flex;
   background-color: pink;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  margin: auto;
+  justify-content: space-around;
+  flex-direction: column;
+  padding-bottom: 100px;
+  margin-top: 40px;
+}
+
+.info-container {
+  /* margin-top: -100px; */
+  max-width: 800px;
+  padding: 50px;
 }
