--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,5 +1,5 @@
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   padding: 0 20px;
   flex-grow: 1;
@@ -13,6 +13,7 @@
   color: white;
   font-weight: 300;
   box-shadow: 0px 1px 1px white;
+  width: 100%;
 }
 
 .toggle {
@@ -44,5 +45,6 @@
 
   .each-link {
     padding: 0 20px;
+    text-decoration: none;
   }
 }
